--- a/app/_scss/_nav.scss
+++ b/app/_scss/_nav.scss
@@ -12,16 +12,25 @@
   display: flex;
   align-items: center;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: center;
   width: 100%;
-  margin: 0;
+  margin-top: 25px;
   padding: 0;
   list-style: none;
   font-family: $headings-font-family;
   font-weight: $headings-font-weight;
   
+  @media (min-width: $screen-sm) {
+    justify-content: space-between;
+    margin-top: 0;
+  }
+  
   li {
     text-align: center;
+  
+    @media (min-width: $screen-sm) {
+      margin: 0px;
+    }
   }
   
   a {
@@ -49,24 +58,20 @@
 
 // Homepage nav styles
 .nav-hero {
-  position: absolute;
-  left: 0;
-  bottom: -70px;
-  width: 100%;
   
-  @media (min-width: $screen-sm) {
-    position: static;
-    left: auto;
-    bottom: auto;
-    width: auto;
+  @media (min-width: $screen-xs) {
+    text-transform: uppercase;
   }
   
   .nav-list {
-    background: #fff;
+    display: block;
+    margin-top: 0;
+    font-size: 4.7vw;
     
-    @media (min-width: $screen-sm) {
-      background: transparent;
+    @media (min-width: $screen-xs) {
+      display: flex;
       font-size: $font-size-nav;
+      
       
       a {
         color: #fff;
