--- a/app/_scss/_variables.scss
+++ b/app/_scss/_variables.scss
@@ -165,13 +165,13 @@ $cursor-disabled:                not-allowed !default;
 //
 // Note: These variables are not generated into the Customizer.
 
-$zindex-navbar:            1000 !default;
-$zindex-dropdown:          1000 !default;
-$zindex-popover:           1060 !default;
-$zindex-tooltip:           1070 !default;
-$zindex-navbar-fixed:      1030 !default;
-$zindex-modal-background:  1040 !default;
-$zindex-modal:             1050 !default;
+$zindex-1:                    1000 !default;
+$zindex-2:                    1010 !default;
+$zindex-3:                    1020 !default;
+$zindex-4:                    1030 !default;
+$zindex-5:                    1040 !default;
+$zindex-6:                    1050 !default;
+$zindex-7:                    1060 !default;
 
 
 //== Media queries breakpoints
